--- a/index.html
+++ b/index.html
@@ -27,7 +27,54 @@
         </div>
     </header>
     <main>
-
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="two architect discussing about design">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title"><span id="gray">Quick list</span> <span class="black">of Our</span> <br> <span class="orange">Features</span></h3>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <section class="experiance display-flex">
+            <div class="section-title">
+            <h3 class="feature-title love-title">Features you will <br>love & enjoy</h3>
+            <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            </div>
+        </section>
+        <section>
+            <div class="some-facts">
+                <h3 class="feature-title">Some Facts</h3>
+                <p class="feature-descrption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <div class="facts-container">
+                    <!-- .fact*4>img+h4.fact-number+h5.fact-name -->
+                     <div class="fact">
+                        <img src="images/icons/ribon.png" alt="">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                     </div>
+                     <div class="fact">
+                        <img src="images/icons/projects.png" alt="">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                     </div>
+                     <div class="fact">
+                        <img src="images/icons/customers.png" alt="">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                     </div>
+                     <div class="fact">
+                        <img src="images/icons/email.png" alt="">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                     </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
