--- a/index.html
+++ b/index.html
@@ -40,44 +40,59 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
-        <section class="experiance display-flex">
-            <div class="section-title">
-            <h3 class="feature-title love-title">Features you will <br>love & enjoy</h3>
-            <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            </div>
-        </section>
         <section>
             <div class="some-facts">
                 <h3 class="feature-title">Some Facts</h3>
-                <p class="feature-descrption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <p class="feature-description fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
                 <div class="facts-container">
                     <!-- .fact*4>img+h4.fact-number+h5.fact-name -->
-                     <div class="fact">
+                     <div class="fact-card display-flex">
+                        <div>
                         <img src="images/icons/ribon.png" alt="">
                         <h4 class="fact-number">54</h4>
                         <h5 class="fact-name">Awards Winnings</h5>
+                        </div>
                      </div>
-                     <div class="fact">
-                        <img src="images/icons/projects.png" alt="">
+                     <div class="fact-card display-flex">
+                        <div>
+                            <img src="images/icons/projects.png" alt="">
                         <h4 class="fact-number">1458</h4>
                         <h5 class="fact-name">Project Finished</h5>
+                        </div>
                      </div>
-                     <div class="fact">
-                        <img src="images/icons/customers.png" alt="">
+                     <div class="fact-card display-flex">
+                        <div>
+                            <img src="images/icons/customers.png" alt="">
                         <h4 class="fact-number">590</h4>
                         <h5 class="fact-name">Clients Worked</h5>
+                        </div>
                      </div>
-                     <div class="fact">
-                        <img src="images/icons/email.png" alt="">
+                     <div class="fact-card display-flex">
+                        <div>
+                            <img src="images/icons/email.png" alt="">
                         <h4 class="fact-number">22578</h4>
                         <h5 class="fact-name">Email Send</h5>
+                        </div>
                      </div>
                 </div>
             </div>
         </section>
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title feature-title">Our Sponspors</h3>
+                <p class="section-description feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
-
+        
     </footer>
 </body>
 </html>
