--- a/index.html
+++ b/index.html
@@ -40,6 +40,37 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <section class="features display-flex">
+            <div>
+                <h3 class="feature-title feature-section-title">Features you will <br>love & enjoy</h3>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Dexktop & Mobile Version</h4>
+                    <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Dexktop & Mobile Version</h4>
+                    <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Dexktop & Mobile Version</h4>
+                    <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Dexktop & Mobile Version</h4>
+                    <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div>
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+        </section>
         <section>
             <div class="some-facts">
                 <h3 class="feature-title">Some Facts</h3>
